# sakya

./: .gitignore  .secrets.baseline  CLAUDE.md  Cargo.toml  README.md  bun.lockb  package.json  playwright.config.ts  vite.config.js  vitest.config.ts  wdio.conf.ts
.claude/: settings.json
.claude/agents/: lexical-specialist.md  rust-architect.md  svelte-developer.md  testing-engineer.md  writing-app-designer.md
.claude/hooks/: pre-commit-gate.fish  pre-compact.fish  session-start.fish  stop-audit.fish  test-failure-tracker.fish  validate-tasks-post-edit.fish
.claude/hooks/lib/: sakya-emacs.fish
.claude/skills/dashboard/: SKILL.md
.claude/skills/frontend-design/: SKILL.md  alignment.org
.claude/skills/multi-file-changes/: SKILL.md
.claude/skills/planning/: SKILL.md
.claude/skills/task-runner/: SKILL.md
.claude/skills/visual-testing/: SKILL.md
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: e2e_fixes_final_comprehensive_report.md  e2e_test_failures_analysis.md  e2e_test_fixes_detailed.md  item-009-launcher-page.md  project_overview.md  sprint_writing_sessions_api.md  suggested_commands.md  task_completion_checklist.md
@research/: character-frameworks.md  crdt-sync-e2ee-infrastructure.md  lexical-editor.md  scrivener-analysis.md  short-story-craft.md  svelte5-reactivity-best-practices.md  worldbuilding.md  writing-methodologies.md
@tasks/: CLAUDE.md  dashboard.org  reference.org
@tasks/agents/: index.org  lexical-specialist.org  rust-architect.org  svelte-developer.org  testing-engineer.org  writing-app-designer.org
@tasks/bugfixes/: BUG-001-yaml-missing-version.org  BUG-002-entity-editing.org  BUG-004-focus-mode-blank.org  BUG-005-infinite-loop-non-manuscript.org  BUG-006-entity-tab-background.org  BUG-007-new-entity-type-freeze.org
@tasks/design/: lexical-editor.org
@tasks/elisp/: prd-tasks-test.el  prd-tasks.el  readme.org
@tasks/elisp/test-fixtures/: chk-test.org
@tasks/improvements/: IMP-001-onboarding-empty-states.org  IMP-001-prd-hooks.org  IMP-002-recent-projects.org  IMP-003-crud-discoverability.org  IMP-004-typewriter-centering.org  IMP-005-svelte5-reactivity.org  IMP-006-concurrent-playwright.org  IMP-007-visual-regression.org  IMP-008-navigation-store.org  IMP-009-schema-templates.org  IMP-010-reliability-hardening.org
@tasks/process/: dashboard.org  index.org  multi-file-changes.org  planning.org  task-runner.org  visual-testing.org
@tasks/projects/: PROJ-001-foundation.org  PROJ-002-entity-system.org  PROJ-003-lexical-editor.org  PROJ-004-manuscript.org  PROJ-005-notes-corkboard.org  PROJ-006-integration.org  PROJ-007-ux-crud-journeys.org  PROJ-008-writing-sessions.org  PROJ-009-distraction-free-mode.org  PROJ-010-manuscript-compilation.org  PROJ-011-crdt-sync.org
@tasks/projects/ideas/: chapter-scenes.org  living-world-graph.org  smart-synopsis-ai.org  timeline-view.org  version-snapshots.org
crates/sakya-auth/: Cargo.toml
crates/sakya-auth/src/: db.rs  device.rs  error.rs  jwt.rs  lib.rs  magic_link.rs  middleware.rs
crates/sakya-crdt/: Cargo.toml
crates/sakya-crdt/src/: chapter.rs  entity.rs  error.rs  export.rs  import.rs  lib.rs  marks.rs  note.rs  project.rs
crates/sakya-crdt/tests/: roundtrip_tests.rs
crates/sakya-crypto/: Cargo.toml
crates/sakya-crypto/src/: document_key.rs  encryptor.rs  error.rs  hash_chain.rs  key_exchange.rs  lib.rs  pairing.rs  provisioning.rs  rotation.rs  signer.rs
crates/sakya-crypto/tests/: property_tests.rs
crates/sakya-sync-client/: Cargo.toml
crates/sakya-sync-client/src/: engine.rs  error.rs  lib.rs  offline.rs  reconnect.rs  sync_flow.rs
crates/sakya-sync-client/tests/: two_client_sync.rs
crates/sakya-sync-protocol/: Cargo.toml
crates/sakya-sync-protocol/src/: error.rs  fragment.rs  lib.rs  message.rs
crates/sakya-sync-protocol/tests/: property_tests.rs
crates/sakya-sync-server/: Cargo.toml
crates/sakya-sync-server/src/: error.rs  lib.rs  main.rs  room.rs  state.rs  storage.rs  ws.rs
crates/sakya-sync-server/src/routes/: auth.rs  devices.rs  health.rs  mod.rs
crates/sakya-sync-server/tests/: integration.rs
e2e/: app.spec.ts  chapter-metadata.spec.ts  chapter-reorder.spec.ts  context-menus.spec.ts  crud-discoverability.spec.ts  delete-operations.spec.ts  distraction-free.spec.ts  editor-sync.spec.ts  entity-editing.spec.ts  entity-workflow.spec.ts  global-setup.ts  infinite-loop-guards.spec.ts  navigation.spec.ts  note-editing.spec.ts  note-inline-editing.spec.ts  note-resize.spec.ts  notes-corkboard.spec.ts  onboarding.spec.ts  project-switch.spec.ts  rename-operations.spec.ts  schema-management.spec.ts  search-and-links.spec.ts  sync-ui.spec.ts  visual-appshell.spec.ts  visual-corkboard.spec.ts  visual-inspector.spec.ts  visual-overlays.spec.ts  visual-stats.spec.ts  visual.spec.ts  writing-sessions.spec.ts  writing-workflow.spec.ts
e2e-tauri/: app.spec.ts  run.fish
e2e/fixtures/: mock-data.ts
e2e/utils/: screenshots.ts  tauri-mocks.ts
examples/the-warmth-of-distant-things/: sakya.yaml
examples/the-warmth-of-distant-things/manuscript/: chapter-01-the-temperature-of-memory.md  chapter-02-the-length-of-carver-street.md  manuscript.yaml
examples/the-warmth-of-distant-things/notes/: neighborhood-research.md  notes.yaml  plot-outline.md  thematic-analysis.md
examples/the-warmth-of-distant-things/schemas/: character.yaml  idea.yaml  item.yaml  (+1 more)
scripts/: dev.ts  run-test-plan.fish  sync-agents.fish
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  keystore.rs  lib.rs  main.rs  test_helpers.rs
src-tauri/src/commands/: compile.rs  entity.rs  manuscript.rs  mod.rs  notebook.rs  notes.rs  pairing.rs  project.rs  search.rs  sessions.rs  sync.rs
src-tauri/src/models/: compile.rs  entity.rs  manuscript.rs  mod.rs  notes.rs  project.rs  session.rs
src-tauri/src/services/: frontmatter.rs  mod.rs  notes.rs  slug_service.rs  yaml_service.rs
src/routes/: +layout.svelte  +page.svelte  page.test.ts
src/tests/: setup.ts  tauri-test-utils.ts
(+108 files in other folders)
