[package]
name = "sakya-crdt"
version = "0.1.0"
edition = "2021"
description = "CRDT document model for Sakya projects using Loro"

[dependencies]
sakya-crypto = { path = "../sakya-crypto" }
loro = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = "0.12"
slug = "0.1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
