[package]
name = "sakya-crypto"
version = "0.1.0"
edition = "2021"
description = "E2E encryption primitives for Sakya sync"

[dependencies]
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
blake2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
qrcode = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
