[package]
name = "sakya-sync-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire protocol messages for Sakya sync"

[dependencies]
sakya-crypto = { path = "../sakya-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"
