[package]
name = "sakya-sync-server"
version = "0.1.0"
edition = "2021"
description = "Axum WebSocket relay server for Sakya sync"

[[bin]]
name = "sakya-sync-server"
path = "src/main.rs"

[dependencies]
sakya-sync-protocol = { path = "../sakya-sync-protocol" }
sakya-crypto = { path = "../sakya-crypto" }
sakya-auth = { path = "../sakya-auth" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
listenfd = "1"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"
